--- a/VeterinarySystem/VeterinarySystem/GOODVeterinarySystem.csproj
+++ b/VeterinarySystem/VeterinarySystem/GOODVeterinarySystem.csproj
@@ -51,8 +51,19 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +75,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clinic.cs">
+      <DependentUpon>VeterinaryModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ClinicWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +101,12 @@
     </Compile>
     <Compile Include="ClinicNewVetWindow.Designer.cs">
       <DependentUpon>ClinicNewVetWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Owner.cs">
+      <DependentUpon>VeterinaryModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Pet.cs">
+      <DependentUpon>VeterinaryModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ProfileWindow.cs">
       <SubType>Form</SubType>
@@ -113,6 +133,27 @@
     </Compile>
     <Compile Include="SignUpWindow.Designer.cs">
       <DependentUpon>SignUpWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Treatment.cs">
+      <DependentUpon>VeterinaryModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vet.cs">
+      <DependentUpon>VeterinaryModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VeterinaryModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VeterinaryModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VeterinaryModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VeterinaryModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VeterinaryModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>VeterinaryModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="VetWindow.cs">
       <SubType>Form</SubType>
@@ -156,6 +197,8 @@
     <EmbeddedResource Include="VetWindow.resx">
       <DependentUpon>VetWindow.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="App.Config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -165,9 +208,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <EntityDeploy Include="VeterinaryModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>VeterinaryModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="VeterinaryModel.edmx.diagram">
+      <DependentUpon>VeterinaryModel.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="DatabaseVeterinary.mdf">
@@ -176,6 +223,16 @@
     <Content Include="DatabaseVeterinary_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>DatabaseVeterinary.mdf</DependentUpon>
+    </Content>
+    <Content Include="VeterinaryModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>VeterinaryModel.edmx</DependentUpon>
+      <LastGenOutput>VeterinaryModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="VeterinaryModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>VeterinaryModel.edmx</DependentUpon>
+      <LastGenOutput>VeterinaryModel.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -189,6 +246,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
