--- a/VeterinarySystem/VeterinarySystem/GOODVeterinarySystem.csproj
+++ b/VeterinarySystem/VeterinarySystem/GOODVeterinarySystem.csproj
@@ -96,11 +96,11 @@
     <Compile Include="ClinicAllInformationWindow.Designer.cs">
       <DependentUpon>ClinicAllInformationWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="ClinicOnceInformationWindow.cs">
+    <Compile Include="OnceInformationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ClinicOnceInformationWindow.Designer.cs">
-      <DependentUpon>ClinicOnceInformationWindow.cs</DependentUpon>
+    <Compile Include="OnceInformationWindow.Designer.cs">
+      <DependentUpon>OnceInformationWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="ClinicNewVetWindow.cs">
       <SubType>Form</SubType>
@@ -117,11 +117,11 @@
     <Compile Include="OwnerRegistPetWindow.Designer.cs">
       <DependentUpon>OwnerRegistPetWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="OwnerClinicWindow.cs">
+    <Compile Include="OwnerSeeInformationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="OwnerClinicWindow.Designer.cs">
-      <DependentUpon>OwnerClinicWindow.cs</DependentUpon>
+    <Compile Include="OwnerSeeInformationWindow.Designer.cs">
+      <DependentUpon>OwnerSeeInformationWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="OwnerNewPetWindow.cs">
       <SubType>Form</SubType>
@@ -206,8 +206,8 @@
     <EmbeddedResource Include="ClinicAllInformationWindow.resx">
       <DependentUpon>ClinicAllInformationWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ClinicOnceInformationWindow.resx">
-      <DependentUpon>ClinicOnceInformationWindow.cs</DependentUpon>
+    <EmbeddedResource Include="OnceInformationWindow.resx">
+      <DependentUpon>OnceInformationWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ClinicNewVetWindow.resx">
       <DependentUpon>ClinicNewVetWindow.cs</DependentUpon>
@@ -215,8 +215,8 @@
     <EmbeddedResource Include="OwnerRegistPetWindow.resx">
       <DependentUpon>OwnerRegistPetWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="OwnerClinicWindow.resx">
-      <DependentUpon>OwnerClinicWindow.cs</DependentUpon>
+    <EmbeddedResource Include="OwnerSeeInformationWindow.resx">
+      <DependentUpon>OwnerSeeInformationWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OwnerNewPetWindow.resx">
       <DependentUpon>OwnerNewPetWindow.cs</DependentUpon>
